[project]
name = "paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "metric-learn>=0.7.0",
  "tabulate>=0.9.0",
  "ucimlrepo>=0.0.7",
  "scikit-learn>=0.24.0",
  "numpy>=1.20.0",
  "scipy>=1.6.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
